fix(task): when the task is done the color of the text is not legible
References:
- https://github.com/Skb08/ToDoList/issues/1

--- a/style07.css
+++ b/style07.css
@@ -87,7 +87,7 @@ main{
 
 .task.is-done{
     text-decoration: line-through;
-    color: var(--color-black);
+    color: var(--color-white);
     background-color: var(--color-success) !important;
 }
 
